Stop overlapping with map; smaller navigation; submit comment nice form.

--- a/web/css.css
+++ b/web/css.css
@@ -3,6 +3,8 @@
 
 body {
     font-family: "Gill Sans", "Gill Sans MT", Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding: 1em;
 }
 
 h1 {
@@ -36,13 +38,17 @@ ul#error {
 
 #navigation {
     position: absolute;
-    top: 1em;
+    top: 2em;
     right: 1em;
-    padding: 0.5em 1em 1em;
+    padding: 0.5em;
     background-color: #eeeeee;
     border: solid 2px #999999;
     margin: 0;
     list-style-type: none;
+}
+#navigation li {
+    float: right;
+    padding: 0 0.5em;
 }
 
 /* Forms */
